--- a/imports/ui/components/notifications/notifications.html
+++ b/imports/ui/components/notifications/notifications.html
@@ -1,13 +1,13 @@
 <template name="notifications">
     {{#if loadComplete}}
         <div id="notification-target"
-             class="position-fixed bottom-0 right-0 p-3 notification-target">
+             class="position-fixed bottom-0 right-0 p-3 notification-target d-print-none">
         </div>
     {{/if}}
 </template>
 
 <template name="notification">
-    <div id="{{id}}" class="toast" role="alert"
+    <div id="{{id}}" class="toast d-print-none" role="alert"
          aria-live="assertive"
          aria-atomic="true"
          data-delay="{{delay}}"
