--- a/imports/ui/layout/containers/containers.html
+++ b/imports/ui/layout/containers/containers.html
@@ -14,7 +14,7 @@
 <template name="main-render-target">
     <div class="mainwrapper">
         {{> navSide class="d-none d-md-block"}}
-        <div class="contentwrapper w-100 vh-100 d-flex">
+        <div class="contentwrapper w-100 vh-100 d-flex bg-print-none">
             <main role="main" class="w-100 h-100">{{> yield}}</main>
         </div>
         {{> navBottom}}
