--- a/imports/ui/layout/nav/bottom/navBottom.html
+++ b/imports/ui/layout/nav/bottom/navBottom.html
@@ -1,6 +1,6 @@
 <template name="navBottom">
     {{#if selectedCourse}}
-        <div class="rightsidebar d-flex vh-100 p-2">
+        <div class="rightsidebar d-flex vh-100 p-2 d-print-none">
             <a class="toggleicon righticons sidebar-right-toggle" href>
                 {{#unless compressedView}}
                     {{> icon name="angle-right"}}
