--- a/imports/ui/layout/nav/bottom/navBottom.scss
+++ b/imports/ui/layout/nav/bottom/navBottom.scss
@@ -1,4 +1,5 @@
 .rightsidebar {
+  overflow-y: auto;
   background-color: #d1d5d8; /* TODO use variables */
   position: relative;
   transition: all 0.3s ease-in-out 0s;
