--- a/imports/ui/layout/containers/containers.scss
+++ b/imports/ui/layout/containers/containers.scss
@@ -3,8 +3,9 @@
   justify-content: space-between;
 }
 
-.contentwrapper {
-  overflow: auto;
+main {
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .profiles img {
@@ -20,7 +21,7 @@
   color: #ffffff;
   background: #9f9f9f;
   border: 1px solid #dddddd;
-  width: 200px;
+  width: 220px;
   margin: auto;
   padding: 29px 5px 10px;
   margin-top: -20px;
@@ -46,4 +47,10 @@
 
 .profiles:hover .pro-captions h5, .profiles.active .pro-captions h5 {
   color: #ffffff !important;
+}
+
+@media print {
+  main {
+    overflow: visible;
+  }
 }
