--- a/imports/ui/layout/nav/side/navSide.scss
+++ b/imports/ui/layout/nav/side/navSide.scss
@@ -2,18 +2,18 @@
 
 .leftsidebar {
   flex: 0 0 auto;
-  max-width: 30%;
   height: 100vh;
+  max-width: 30%;
   transition: all 0.3s ease-in-out 0s;
 }
 
 .sidebar-sticky {
-  width: 60px;
-  padding-top: 15px;
   border-right: 1px solid #ddd;
+  flex: 0 0 auto;
   height: 100vh;
   overflow: auto;
-  flex: 0 0 auto;
+  padding-top: 15px;
+  width: 60px;
 }
 
 .userinfo {
@@ -42,91 +42,106 @@
 .sidebar-nav-link.disabled {
   opacity: 0.4;
 }
+
 .userlogin {
-  padding: 0px !important;
+  border: 0;
   font-size: 36px;
   margin-top: 20px;
-  border: none;
+  padding: 0 !important;
 }
+
 .logoutbtn {
-  padding: 0px !important;
+  border: 0;
   font-size: 26px;
   margin-top: 20px;
-  border: none;
+  padding: 0 !important;
 }
+
 .userinfo {
   position: relative;
 }
+
 .toggleicon {
-  width: 20px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
   align-items: center;
+  background-color: #646464;
   border: 1px solid #fff;
   border-radius: 50%;
   color: #fff;
+  cursor: pointer;
+  display: flex;
+  height: 20px;
+  justify-content: center;
   position: absolute;
   right: -12px;
   top: 38px;
-  background-color: #646464;
+  width: 20px;
   z-index: 100;
-  cursor: pointer;
 }
+
 .toggleicon:hover {
   background-color: #f59d1d;
   color: #fff;
 }
+
 .titleslider {
-  display: flex;
-  justify-content: space-around;
   align-items: center;
   color: #fff;
+  display: flex;
+  justify-content: space-around;
   margin-top: 30px;
+
   span {
-    font-weight: bold;
     font-size: 24px;
+    font-weight: bold;
   }
 }
+
 .sidebarwrapper {
-  padding: 15px;
   height: 100vh;
   overflow: auto;
+  padding: 15px;
 }
+
 .btnslist {
   list-style: none;
-  padding: 0px;
   margin: 0;
+  padding: 0;
+
   li {
     display: block;
+
     a {
-      padding: 10px;
-      display: block;
       background-color: #f0f0f0;
-      margin-bottom: 10px;
-      text-align: center;
-      font-weight: 500;
+      display: block;
       font-size: 15px;
+      font-weight: 500;
+      margin-bottom: 10px;
+      padding: 10px;
+      text-align: center;
+
       &:hover {
         background-color: #f59d1d;
         color: #fff !important;
         cursor: pointer;
       }
+
       a.active {
         background-color: #f59d1d;
       }
     }
   }
 }
+
 .checkboxlist {
   list-style: none;
-  padding: 0px;
+  margin: 0;
   max-height: 140px;
   overflow: auto;
-  margin: 0;
+  padding: 0;
+
   li {
-    display: block;
     color: #f5f5f5;
+    display: block;
     margin-bottom: 10px;
   }
 }
