refactor: exec sync with jwt instead of login and remove unused code

--- a/imports/ui/pages/class/visualization/visualization.scss
+++ b/imports/ui/pages/class/visualization/visualization.scss
@@ -326,7 +326,7 @@
   right: 7px;
 }
 
-.zoombtn #zoombar { // cross-browser support
+.zoombar { // cross-browser support
   align-items: center;
   display: flex;
 }
