--- a/imports/ui/components/request/requestAccount.html
+++ b/imports/ui/components/request/requestAccount.html
@@ -13,17 +13,23 @@
                         type="normal"
                         buttonClasses="d-none"}}
 
-                {{#unless sending}}
-                    <button class="btn btn-primary" type="submit"
-                            form="requestForm">
-                        {{i18n "request.send"}}
+                <div class="d-flex justify-content-between">
+                    {{#unless sending}}
+                        <button class="btn btn-primary" type="submit"
+                                form="requestForm">
+                            {{i18n "request.send"}}
+                        </button>
+                    {{else}}
+                        <button class="btn btn-primary disabled" disabled>
+                            {{> icon name="spinner" pulse=true}}
+                            {{i18n "request.sending"}}
+                        </button>
+                    {{/unless}}
+
+                    <button class="btn btn-outline-gray cancel-request-btn">
+                        {{i18n "actions.cancel"}}
                     </button>
-                {{else}}
-                    <button class="btn btn-primary disabled" disabled>
-                        {{> icon name="spinner" pulse=true}}
-                        {{i18n "request.sending"}}
-                    </button>
-                {{/unless}}
+                </div>
             </div>
         {{else}}
             <p class="text-center">
