fix(login): logout remove when login fails to revoke access token

--- a/imports/ui/components/notifications/notifications.html
+++ b/imports/ui/components/notifications/notifications.html
@@ -1,6 +1,6 @@
 <template name="notifications">
     {{#if loadComplete}}
-        <div id="notification-target"
+        <div id="* notification-target"
              class="position-fixed bottom-0 right-0 p-3 notification-target d-print-none">
         </div>
     {{/if}}
