fix(ui): user page competency cards equal layout height

--- a/imports/ui/pages/user/user.scss
+++ b/imports/ui/pages/user/user.scss
@@ -18,17 +18,12 @@
   background-color: #e2e4e7;
 }
 
-.competency-container {
-  min-height: 6rem;
-  padding: 0.75em !important;
-}
-
 .competency-card {
   cursor: pointer;
 }
 
 .bg-blue-gray {
-  background-color: #8094aa;
+  background-color: #8094aa !important;
 }
 
 /* ========================================================================== */
